--- a/requirements.txt
+++ b/requirements.txt
@@ -9,20 +9,35 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+dj-database-url==3.0.1
 Django==5.2.5
+django-environ==0.12.0
 django-rest-framework==0.1.0
 djangorestframework==3.16.1
+flower==2.0.1
+gunicorn==23.0.0
+humanize==4.13.0
 idna==3.10
+joblib==1.5.2
 kombu==5.5.4
 lxml==6.0.1
+numpy==2.3.2
 packaging==25.0
+prometheus_client==0.22.1
 prompt_toolkit==3.0.52
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
-redis==6.4.0
+python-dotenv==1.1.1
+pytz==2025.2
+redis==5.2.1
 requests==2.32.5
+scikit-learn==1.7.1
+scipy==1.16.1
 six==1.17.0
 soupsieve==2.8
 sqlparse==0.5.3
+threadpoolctl==3.6.0
+tornado==6.5.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
